2009-02-16  Massimo Cora'  <mcora@svn.gnome.org>

	* configure.in:
	* plugins/symbol-db/Makefile.am:
	* plugins/symbol-db/test/Makefile.am:
	* plugins/symbol-db/test/main.c:
	removed outdated test file.

2009-02-12  Yang Hong  <hongyang@redflag-linux.com>
 
	* plugins/search/search-replace.c (create_dialog),
 	(on_search_expression_entry_changed):
 	#571381 – Seach button disabled if no files opened. 

2009-02-16  Johannes Schmid  <jhs@gnome.org>

	* plugins/file-manager/file-view.c (file_view_sort_model):
	#571733 – file manager should sort files case-insensitively

2009-02-16  Johannes Schmid  <jhs@gnome.org>

	* libanjuta/anjuta-plugin-description.c (parse_key_value):
	571233 – Uncorrect loading of subversion plugin (thanks to Yuriy Penkin 
	for the patch!)
	
2009-02-15  James Liggett  <jrliggett@cox.net>

	* ChangeLog:
	E-mail address fix.

2009-02-15  James Liggett  <jrliggett@cox.net>

	* libanjuta/anjuta-utils.c:
	* libanjuta/anjuta-utils.h:
	Add utility function for converting lists of GFile objects to lists of 
	relative paths.

2009-02-15  Johannes Schmid  <jhs@gnome.org>

	* plugins/project-wizard/templates/Makefile.am:
	* plugins/project-wizard/templates/gnome.wiz:
	* plugins/project-wizard/templates/gnome/.cvsignore:
	* plugins/project-wizard/templates/gnome/Makefile.am:
	* plugins/project-wizard/templates/gnome/po/.cvsignore:
	* plugins/project-wizard/templates/gnome/po/Makefile.am:
	* plugins/project-wizard/templates/gnome/po/POTFILES.in:
	* plugins/project-wizard/templates/gnome/src/.cvsignore:
	* plugins/project-wizard/templates/gnome/src/Makefile.am:
	* plugins/project-wizard/templates/gnome/src/Makefile.am.tpl:
	* plugins/project-wizard/templates/gnome/src/callbacks.c:
	* plugins/project-wizard/templates/gnome/src/callbacks.h:
	* plugins/project-wizard/templates/gnome/src/main.c:
	* plugins/project-wizard/templates/gnome/src/project.glade:
	Remove gnome project template as it just contains deprecated
	libraries
